syntax="proto3";

option go_package = "go-noti-server/health";

package health;

service HealthService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
}

message HealthCheckRequest {
}

message HealthCheckResponse {
  string message = 1;
}
